--- a/sio_db_concept/package.json
+++ b/sio_db_concept/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.9.3",
     "axios": "^1.5.1",
     "next": "latest",
     "react": "latest",
